--- a/snmp.conf
+++ b/snmp.conf
@@ -60,9 +60,9 @@ mibdirs +/usr/share/snmp/mibs/iana
 mibdirs +/usr/share/snmp/mibs/ieee
 mibdirs +/usr/share/snmp/mibs/ietf
 mibdirs +/usr/share/snmp/mibs/checkpoint
-# mibdirs +/usr/share/snmp/mibs/cisco/v1
 mibdirs +/usr/share/snmp/mibs/cisco/v2
 mibdirs +/usr/share/snmp/mibs/citrix
+mibdirs +/usr/share/snmp/mibs/f5
 # mibs: Specifies a list of mibs to be searched for and loaded.
 #   Adding a '+' sign to the front of the argument appends the new
 #   mib name to the list of mibs already being searched for.
