--- a/snmp.conf
+++ b/snmp.conf
@@ -32,7 +32,7 @@ defversion  2c
 #   override: with -c on the command line.
 #   arguments: communityname
 
-defcommunity  nocmonitor
+defcommunity  public
 
 
 
@@ -59,10 +59,12 @@ mibdirs +/usr/share/snmp/mibs/system
 mibdirs +/usr/share/snmp/mibs/iana
 mibdirs +/usr/share/snmp/mibs/ieee
 mibdirs +/usr/share/snmp/mibs/ietf
+mibdirs +/usr/share/snmp/mibs/a10
 mibdirs +/usr/share/snmp/mibs/checkpoint
 mibdirs +/usr/share/snmp/mibs/cisco/v2
 mibdirs +/usr/share/snmp/mibs/citrix
 mibdirs +/usr/share/snmp/mibs/f5
+
 # mibs: Specifies a list of mibs to be searched for and loaded.
 #   Adding a '+' sign to the front of the argument appends the new
 #   mib name to the list of mibs already being searched for.
