--- a/snmp.conf
+++ b/snmp.conf
@@ -63,7 +63,9 @@ mibdirs +/usr/share/snmp/mibs/a10
 mibdirs +/usr/share/snmp/mibs/checkpoint
 mibdirs +/usr/share/snmp/mibs/cisco/v2
 mibdirs +/usr/share/snmp/mibs/citrix
+mibdirs +/usr/share/snmp/mibs/emc
 mibdirs +/usr/share/snmp/mibs/f5
+mibdirs +/usr/share/snmp/mibs/juniper
 
 # mibs: Specifies a list of mibs to be searched for and loaded.
 #   Adding a '+' sign to the front of the argument appends the new
