updating snmp.conf

--- a/snmp.conf
+++ b/snmp.conf
@@ -60,6 +60,7 @@ mibdirs +/usr/share/snmp/mibs/iana
 mibdirs +/usr/share/snmp/mibs/ieee
 mibdirs +/usr/share/snmp/mibs/ietf
 mibdirs +/usr/share/snmp/mibs/a10
+mibdirs +/usr/share/snmp/mibs/arista
 mibdirs +/usr/share/snmp/mibs/checkpoint
 mibdirs +/usr/share/snmp/mibs/cisco/v2
 mibdirs +/usr/share/snmp/mibs/citrix
